# cme

./: CMakeLists.txt  README.md  cme.cmake
.github/workflows/: ubuntu.yaml  ubuntu.yaml_  windows.yaml  windows.yaml_
assets/subfolder/: stuff.txt
snippets/: cme.hpp  cpp_beg  cpp_end
tests/: CMakeLists.txt  test.c  test.cpp  test_both.c  test_both.cpp  test_constexpr.c  test_constexpr.cpp  test_explicit.c  test_explicit.cpp  test_implicit.c  test_implicit.cpp  test_module.cpp  test_module_constexpr.cpp
